--- a/app/src/main/res/layout/fragment_records_list.xml
+++ b/app/src/main/res/layout/fragment_records_list.xml
@@ -2,16 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.gbyakov.likework.fragments.RecordsListFragment">
 
     <ListView
         android:id="@+id/records_listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@null" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
