--- a/app/src/main/res/layout/list_item_records.xml
+++ b/app/src/main/res/layout/list_item_records.xml
@@ -2,11 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
     android:layout_height="wrap_content"
     android:minHeight="?android:attr/listPreferredItemHeight">
 
     <FrameLayout
-        android:layout_width="56dp"
+        android:layout_width="40dp"
         android:layout_height="match_parent">
 
         <TextView
@@ -16,7 +18,7 @@
             android:layout_height="match_parent"
             android:text="08:00"
             android:gravity="center"
-            style="@style/TextAppearance.AppCompat.Title" />
+            style="@style/TextAppearance.AppCompat.Subhead" />
 
     </FrameLayout>
 
@@ -25,26 +27,26 @@
         android:layout_width="0dp"
         android:layout_weight="7"
         android:orientation="vertical"
-        android:layout_marginLeft="8dp">
+        android:layout_marginLeft="16dp">
 
         <TextView
             android:id="@+id/list_item_car"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="HIGHLANDER - Е 287 ТА 159"
-            style="@style/TextAppearance.AppCompat.Title"
+            style="@style/TextAppearance.AppCompat.Subhead"
             />
 
         <TextView
             android:id="@+id/list_item_client"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Цыбина Елена Владимировна"
-            style="@style/TextAppearance.AppCompat.Subhead" />
+            style="@style/TextAppearance.AppCompat.Body2" />
 
         <TextView
             android:id="@+id/list_item_details"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="ТО - 20 000 км"
             style="@style/TextAppearance.AppCompat.Body1" />
