orderlist design + group layout

--- a/app/src/main/res/layout/list_item_orders.xml
+++ b/app/src/main/res/layout/list_item_orders.xml
@@ -1,64 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:layout_height="wrap_content"
-    android:minHeight="?android:attr/listPreferredItemHeight">
+    android:minHeight="?android:attr/listPreferredItemHeight"
+    android:gravity="center_vertical">
 
     <LinearLayout
         android:layout_height="fill_parent"
-        android:layout_width="0dp"
-        android:layout_weight="7"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:layout_width="fill_parent">
 
         <TextView
             android:id="@+id/list_item_order_car"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="HIGHLANDER - Е 287 ТА 159"
-            style="@style/TextAppearance.AppCompat.Subhead"
-            />
-
-        <TextView
-            android:id="@+id/list_item_order_client"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Цыбина Елена Владимировна"
-            style="@style/TextAppearance.AppCompat.Body2" />
-
-        <TextView
-            android:id="@+id/list_item_order_details"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ТО - 20 000 км"
-            style="@style/TextAppearance.AppCompat.Body1" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_height="fill_parent"
-        android:layout_width="0dp"
-        android:layout_weight="3"
-        android:orientation="vertical"
-        android:layout_marginLeft="8dp">
+            style="@style/TextAppearance.AppCompat.Body2"
+            android:layout_weight="2" />
 
         <TextView
             android:id="@+id/list_item_order_sum"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="182 900.34"
-            style="@style/TextAppearance.AppCompat.Subhead"
-            android:gravity="right" />
+            style="@style/TextAppearance.AppCompat.Body2"
+            android:gravity="right"
+            android:layout_weight="6" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/list_item_order_client"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Цыбина Елена Владимировна"
+        style="@style/TextAppearance.AppCompat.Body1" />
+
+
+    <LinearLayout
+        android:layout_height="fill_parent"
+        android:orientation="horizontal"
+        android:layout_width="fill_parent">
+
+        <TextView
+            android:id="@+id/list_item_order_status"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ТО - 20 000 км"
+            style="@style/TextAppearance.AppCompat.Caption"
+            android:layout_weight="2" />
 
         <TextView
             android:id="@+id/list_item_order_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="18.12.15"
-            style="@style/TextAppearance.AppCompat.Body2"
-            android:gravity="bottom|right" />
+            style="@style/TextAppearance.AppCompat.Caption"
+            android:layout_weight="6"
+            android:gravity="right" />
 
     </LinearLayout>
 
