--- a/app/src/main/res/layout/list_item_orders.xml
+++ b/app/src/main/res/layout/list_item_orders.xml
@@ -19,7 +19,9 @@
             android:layout_height="wrap_content"
             android:text="HIGHLANDER - Е 287 ТА 159"
             style="@style/TextAppearance.AppCompat.Body2"
-            android:layout_weight="2" />
+            android:layout_weight="2"
+            android:ellipsize="end"
+            android:singleLine="true" />
 
         <TextView
             android:id="@+id/list_item_order_sum"
@@ -37,7 +39,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Цыбина Елена Владимировна"
-        style="@style/TextAppearance.AppCompat.Body1" />
+        style="@style/TextAppearance.AppCompat.Body1"
+        android:ellipsize="end"
+        android:singleLine="true" />
 
 
     <LinearLayout
@@ -51,7 +55,9 @@
             android:layout_height="wrap_content"
             android:text="ТО - 20 000 км"
             style="@style/TextAppearance.AppCompat.Caption"
-            android:layout_weight="2" />
+            android:layout_weight="2"
+            android:ellipsize="end"
+            android:singleLine="true" />
 
         <TextView
             android:id="@+id/list_item_order_date"
