--- a/app/src/main/res/layout/list_item_orders_status.xml
+++ b/app/src/main/res/layout/list_item_orders_status.xml
@@ -5,12 +5,12 @@
     android:background="@color/ColorTabs"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:layout_height="96dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/list_item_order_group"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="32dp"
         android:text="Запись"
         style="@style/TextAppearance.AppCompat.Subhead"
         android:gravity="center_vertical"
