--- a/app/src/main/res/layout/list_item_records.xml
+++ b/app/src/main/res/layout/list_item_records.xml
@@ -28,7 +28,7 @@
         android:layout_width="0dp"
         android:layout_weight="7"
         android:orientation="vertical"
-        android:layout_marginLeft="16dp">
+        android:layout_marginLeft="@dimen/activity_horizontal_margin">
 
         <TextView
             android:id="@+id/list_item_car"
