--- a/app/src/main/res/layout/list_item_orders.xml
+++ b/app/src/main/res/layout/list_item_orders.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -8,65 +8,86 @@
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:gravity="center_vertical">
 
+        <FrameLayout
+            android:layout_width="24dp"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/list_item_order_status_icon"
+                android:layout_gravity="center"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:gravity="center" />
+
+        </FrameLayout>
+
     <LinearLayout
-        android:layout_height="fill_parent"
-        android:orientation="horizontal"
-        android:layout_width="fill_parent">
-
-        <TextView
-            android:id="@+id/list_item_order_car"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="HIGHLANDER - Е 287 ТА 159"
-            style="@style/TextAppearance.AppCompat.Body2"
-            android:layout_weight="2"
-            android:ellipsize="end"
-            android:singleLine="true" />
-
-        <TextView
-            android:id="@+id/list_item_order_sum"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="182 900.34"
-            style="@style/TextAppearance.AppCompat.Body2"
-            android:gravity="right"
-            android:layout_weight="6" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/list_item_order_client"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Цыбина Елена Владимировна"
-        style="@style/TextAppearance.AppCompat.Body1"
-        android:ellipsize="end"
-        android:singleLine="true" />
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_height="fill_parent"
+            android:orientation="horizontal"
+            android:layout_width="fill_parent">
 
-    <LinearLayout
-        android:layout_height="fill_parent"
-        android:orientation="horizontal"
-        android:layout_width="fill_parent">
+            <TextView
+                android:id="@+id/list_item_order_car"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="HIGHLANDER - Е 287 ТА 159"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_weight="2"
+                android:ellipsize="end"
+                android:singleLine="true" />
+
+            <TextView
+                android:id="@+id/list_item_order_sum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="182 900.34"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:gravity="right"
+                android:layout_weight="6" />
+
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/list_item_order_status"
+            android:id="@+id/list_item_order_client"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="ТО - 20 000 км"
-            style="@style/TextAppearance.AppCompat.Caption"
-            android:layout_weight="2"
+            android:text="Цыбина Елена Владимировна"
+            style="@style/TextAppearance.AppCompat.Body1"
             android:ellipsize="end"
             android:singleLine="true" />
 
-        <TextView
-            android:id="@+id/list_item_order_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="18.12.15"
-            style="@style/TextAppearance.AppCompat.Caption"
-            android:layout_weight="6"
-            android:gravity="right" />
+
+        <LinearLayout
+            android:layout_height="fill_parent"
+            android:orientation="horizontal"
+            android:layout_width="fill_parent">
+
+            <TextView
+                android:id="@+id/list_item_order_status"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ТО - 20 000 км"
+                style="@style/TextAppearance.AppCompat.Caption"
+                android:layout_weight="2"
+                android:ellipsize="end"
+                android:singleLine="true" />
+
+            <TextView
+                android:id="@+id/list_item_order_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="18.12.15"
+                style="@style/TextAppearance.AppCompat.Caption"
+                android:layout_weight="6"
+                android:gravity="right" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
