--- a/app/src/main/res/layout/fragment_call_item.xml
+++ b/app/src/main/res/layout/fragment_call_item.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -32,35 +30,15 @@
             android:layout_width="fill_parent">
 
             <TextView
-                android:id="@+id/order_customer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="РЕСО-Гарантия, СПАО"
-                style="@style/TextAppearance.AppCompat.Subhead"
-                android:ellipsize="end"
-                android:singleLine="true" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Контрагент"
-                style="@style/TextAppearance.AppCompat.Caption"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textColor="@color/colorPrimary" />
-
-            <TextView
-                android:id="@+id/order_client"
+                android:id="@+id/call_client"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Попов Николай Геннадьевич"
-                android:layout_marginTop="4dp"
                 style="@style/TextAppearance.AppCompat.Subhead"
                 android:ellipsize="end"
                 android:singleLine="true" />
 
             <TextView
-                android:id="@+id/order_client_caption"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Владелец"
@@ -99,7 +77,7 @@
             android:layout_width="match_parent">
 
             <TextView
-                android:id="@+id/order_car"
+                android:id="@+id/call_car"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TOYOTA LC 200 - O 813 OO 59"
@@ -129,7 +107,7 @@
                     android:layout_weight="2">
 
                     <TextView
-                        android:id="@+id/order_type"
+                        android:id="@+id/call_type"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Текущий ремонт"
@@ -155,7 +133,7 @@
                     android:layout_weight="5">
 
                     <TextView
-                        android:id="@+id/order_sum"
+                        android:id="@+id/call_sum"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="13 504,00"
@@ -197,89 +175,12 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_status" />
-
-        </FrameLayout>
-
-        <LinearLayout
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_width="match_parent"
-            android:layout_weight="2">
-
-            <TextView
-                android:id="@+id/order_status"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Не доведено/не согласовано"
-                style="@style/TextAppearance.AppCompat.Subhead"
-                android:ellipsize="end"
-                android:singleLine="true" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Статус"
-                style="@style/TextAppearance.AppCompat.Caption"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textColor="@color/colorPrimary" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_weight="5">
-
-            <TextView
-                android:id="@+id/order_date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="01.01.16"
-                style="@style/TextAppearance.AppCompat.Subhead"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:gravity="right" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Дата"
-                style="@style/TextAppearance.AppCompat.Caption"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:gravity="right"
-                android:textColor="@color/colorPrimary" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/order_comment_layout"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="8dp"
-        android:layout_width="fill_parent">
-
-        <FrameLayout
-            android:layout_width="24dp"
-            android:layout_height="24dp">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
                 android:src="@drawable/ic_comment" />
 
         </FrameLayout>
 
         <TextView
-            android:id="@+id/order_comment"
+            android:id="@+id/call_comment"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
@@ -288,24 +189,5 @@
             android:ellipsize="end" />
 
     </LinearLayout>
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/order_tabs"
-        app:tabGravity="fill"
-        app:tabMode="fixed"
-        android:background="@color/ColorTabs"
-        app:tabSelectedTextColor="@color/colorPrimaryDark"
-        app:tabIndicatorColor="@color/colorPrimaryDark"
-        app:tabTextColor="@color/colorPrimary"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp">
-    </android.support.design.widget.TabLayout>
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/order_viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v4.view.ViewPager>
 
 </LinearLayout>
