--- a/app/src/main/res/layout/question_item.xml
+++ b/app/src/main/res/layout/question_item.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/abc_list_selector_holo_light">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,6 +27,7 @@
         </FrameLayout>
 
         <LinearLayout
+            android:id="@+id/question_listener"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -43,7 +45,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Нет"
-                style="@style/TextAppearance.AppCompat.Body2" />
+                style="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="@color/colorAccent" />
 
         </LinearLayout>
 
