--- a/app/src/main/res/layout/question_item.xml
+++ b/app/src/main/res/layout/question_item.xml
@@ -1,60 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/abc_list_selector_holo_light">
+    android:layout_height="wrap_content">
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingBottom="8dp"
-        android:paddingTop="8dp">
-
-        <FrameLayout
-            android:layout_width="24dp"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:src="@drawable/ic_question" />
-
-        </FrameLayout>
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="2dp">
 
         <LinearLayout
-            android:id="@+id/question_listener"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:background="@drawable/abc_list_selector_holo_light">
 
-            <TextView
-                android:id="@+id/question_header"
+            <FrameLayout
+                android:layout_width="24dp"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/question_logo"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="center_horizontal|top"
+                    android:gravity="center"
+                    android:src="@drawable/question_transition" />
+
+            </FrameLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Наличие нерешенных вопросов"
-                style="@style/TextAppearance.AppCompat.Subhead" />
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/question_answer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Нет"
-                style="@style/TextAppearance.AppCompat.Body1"
-                android:textColor="@color/colorAccent" />
+                <TextView
+                    android:id="@+id/question_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Наличие нерешенных вопросов"
+                    style="@style/TextAppearance.AppCompat.Subhead" />
+
+                <TextView
+                    android:id="@+id/question_answer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Нет"
+                    style="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="@color/colorAccent"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="@android:color/darker_gray"/>
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
