--- a/app/src/main/res/layout/grid_item_kpi.xml
+++ b/app/src/main/res/layout/grid_item_kpi.xml
@@ -9,21 +9,22 @@
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="3dp">
 
         <LinearLayout
+            android:id="@+id/kpi_container"
             android:orientation="vertical"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:paddingBottom="8dp"
             android:paddingTop="8dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@drawable/abc_list_selector_holo_light">
 
             <TextView
@@ -31,30 +32,61 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Выручка"
-                style="@style/TextAppearance.AppCompat.Body2"
-                android:textColor="@color/ColorTabs"
+                style="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="@color/colorPrimary"
                 android:singleLine="true" />
 
-            <TextView
-                android:id="@+id/kpi_value"
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp"
-                android:text="1 125 000"
-                style="@style/TextAppearance.AppCompat.Title"
-                android:gravity="center_horizontal"
-                android:textColor="@color/colorAccent" />
+                android:layout_height="72dp">
 
-            <TextView
-                android:id="@+id/kpi_percent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="4dp"
-                android:text="35 %"
-                style="@style/TextAppearance.AppCompat.Subhead"
-                android:gravity="right"
-                android:textColor="@color/colorPrimaryDark" />
+                <TextView
+                    android:id="@+id/kpi_value"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="8dp"
+                    android:paddingTop="8dp"
+                    android:text="1 125 000"
+                    style="@style/TextAppearance.AppCompat.Headline"
+                    android:gravity="center_vertical|center_horizontal"/>
+
+                <LinearLayout
+                    android:id="@+id/kpi_percents"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_trend"/>
+
+                    <TextView
+                        android:id="@+id/kpi_trend"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="4dp"
+                        android:text="35 %"
+                        style="@style/TextAppearance.AppCompat.Subhead"
+                        android:gravity="left"
+                        android:textColor="@color/colorPrimaryDark" />
+
+                    <TextView
+                        android:id="@+id/kpi_percent"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="4dp"
+                        android:text="35 %"
+                        style="@style/TextAppearance.AppCompat.Subhead"
+                        android:gravity="right"
+                        android:textColor="@color/colorPrimaryDark" />
+
+                </LinearLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
 
