--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#607D8B</color>
     <color name="colorPrimaryDark">#455A64</color>
-    <color name="colorAccent">#4CAF50</color>
+    <color name="colorAccent">#FF5722</color>
     <color name="ColorIndicator">#FF3D00</color>
     <color name="ColorTabs">#CFD8DC</color>
 </resources>
