shadow effect in pre lollipop devices

--- a/app/src/main/res/layout/fragment_call_item.xml
+++ b/app/src/main/res/layout/fragment_call_item.xml
@@ -199,6 +199,12 @@
 
         </LinearLayout>
 
+        <View
+            android:id="@+id/callhead_shadow"
+            android:layout_width="match_parent"
+            android:layout_height="4dp"
+            android:background="@drawable/shadow" />
+
     </LinearLayout>
 
     <ScrollView
