--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,13 @@
 
         </android.support.design.widget.AppBarLayout>
 
+        <View
+            android:id="@+id/toolbar_shadow"
+            android:layout_width="match_parent"
+            android:layout_marginTop="?attr/actionBarSize"
+            android:layout_height="4dp"
+            android:background="@drawable/shadow" />
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
