--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,12 +34,20 @@
             android:layout_height="4dp"
             android:background="@drawable/shadow" />
 
-        <FrameLayout
+        <android.support.v4.widget.SwipeRefreshLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/swipe_refresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="?attr/actionBarSize"
-            android:id="@+id/container">
-        </FrameLayout>
+            android:layout_marginTop="?attr/actionBarSize">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/container">
+            </FrameLayout>
+
+        </android.support.v4.widget.SwipeRefreshLayout>
 
         <com.github.clans.fab.FloatingActionMenu
             android:id="@+id/fab_menu"
