--- a/app/src/main/res/layout/fragment_call_item.xml
+++ b/app/src/main/res/layout/fragment_call_item.xml
@@ -208,9 +208,10 @@
     </LinearLayout>
 
     <ScrollView
+        android:id="@+id/questions_scroller"
         android:layout_width="match_parent"
-        android:layout_marginTop="4dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
