Preferences for notifications

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -14,4 +14,9 @@
         android:key="periodic_sync_interval"
         android:title="@string/auto_sync_interval" />
 
+    <SwitchPreference
+        android:key="enable_notifications"
+        android:title="Уведомления"
+        android:summary="Получение уведомлений"/>
+
 </PreferenceScreen>
